--- a/frontend/src/components/register/VerticalTab.css
+++ b/frontend/src/components/register/VerticalTab.css
@@ -8,6 +8,7 @@
 .tab {
     background-color: yellow;
     width: 25vw;
+    margin: 10px;
     
 }
 
@@ -17,7 +18,6 @@
 
 .input {
     height: 500px;
-    background-color: lightsalmon;
 }
 
 .input:hover {
