--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+/* how to set universal font: https://stackoverflow.com/questions/7025756/how-to-apply-global-font-to-whole-html-document */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +12,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html * {
+  /* font-size: 1em !important; */
+  color: #000 !important;
+  font-family: Acme !important;
+  /* font-family: Russo One !important; */
+  font-weight: 100;
 }
