--- a/frontend/src/components/Navbars/LoginAndRegisterNavBar.css
+++ b/frontend/src/components/Navbars/LoginAndRegisterNavBar.css
@@ -1,11 +1,20 @@
-.navbar {
-    align-items: flex-end;
+.navbar-dark {
+    display: flex;
+    justify-content: flex-start;
+    background-color: #070606 !important;
 }
 
-.text {
-    color: blanchedalmond;
+.nav {
+    margin-left: auto;
 }
 
-.justify-content-end {
-    color: blanchedalmond;
+.item {
+    color: whitesmoke !important;
+    border: lightgoldenrodyellow solid;
+    border-radius: 8px;
+    margin-right: 16px;
+}
+
+.item :hover {
+    background-color: lightslategray;
 }
