--- a/frontend/src/components/navbars/dashboard/DashboardNavBar.css
+++ b/frontend/src/components/navbars/dashboard/DashboardNavBar.css
@@ -1,7 +1,10 @@
 .navbar-dark {
+    /* flex: 1;
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-start; */
+    width: 100%;
     background-color: #070606 !important;
+    max-height: 62px;
 }
 
 .nav {
